--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,8 @@
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']\n",
     "countries_of_top_cities\n",
-    "\n"
+    "\n",
+    "zip()"
    ]
   },
   {
