Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']\n",
     "countries_of_top_cities\n",
     "\n",
-    "zip(top_travel_cities,)"
+    "zip(top_travel_cities,countries_of_top)"
    ]
   },
   {
