Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,27 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea']"
+       "<zip at 0x7f3cb0845548>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +192,7 @@
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']\n",
     "countries_of_top_cities\n",
     "\n",
-    "zip(top_travel_cities,countries_of_top)"
+    "zip(top_travel_cities,countries_of_top_cities)"
    ]
   },
   {
