Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -575,22 +575,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Walla Walla Valley', 'Marakesh']"
+       "['Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[4:]"
+    "top_travel_cities[4:8]"
    ]
   },
   {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
