Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -825,28 +825,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Jheez' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-1789c2d4caf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtop_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJheez\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Jheez' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_travel_cities[4] = Jheez'"
+    "top_travel_cities[4] = 'Jheez'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +844,7 @@
        " 'Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 4,\n",
+       " 'Jheez',\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -864,10 +852,11 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
        " 'San Antonio']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
