--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -160,10 +160,15 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang']"
+       " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio',\n",
+       " 'Solta',\n",
+       " 'Solta',\n",
+       " 'Solta']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
