Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -619,15 +619,10 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio',\n",
-       " 'San Antonio',\n",
-       " 'Solta',\n",
-       " 'Solta',\n",
-       " 'Solta']"
+       " 'Pyeongchang']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +649,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
