Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -917,12 +917,10 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio',\n",
-       " 'San Antonio']"
+       " 'Pyeongchang']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
