Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1149,28 +1149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
+       "['Walla Walla Valley',\n",
        " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
        " 'Marakesh',\n",
        " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Iguazu Falls',\n",
+       " 'Toronto',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Albuquerque',\n",
+       " 'Pyeongchang',\n",
+       " 'Solta',\n",
+       " 'Archipelago Sea',\n",
+       " 'Buenos Aires']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,16 +1187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "12"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,16 +1207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "13"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
